# managym

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  compile_flags.txt  entry.sh  pyproject.toml
.claude/commands/: diagnose.md  instrument.md  optimize.md  profile.md  refactor.md
.design/: diagnosis.md  instrumentation-skip-trivial.md  instrumentation-step-timing.md  instrumentation.md  perf.md  profile-20260116-1606.md  profile-20260116-1608.md  profile-20260116-1614.md  profile-20260116-1631.md  profile-20260116-1655.md  profile-20260116-1720.md  profile-20260116-1731.md  profile-20260116-1744.md  profile-20260116-1750.md  profile-20260116-1758.md  profile-20260116-1800.md  profile-20260116-2200.md  profile-20260116-post-infodict.md  questions.md  refactor-proposal.md
.lf/: config.yaml
managym/: __init__.py  __init__.pyi  _managym.pyi  libmanagym_lib.dylib  main.cpp
managym/action/: action.cpp  action.h
managym/agent/: README.md  action.cpp  action.h  action_space.cpp  action_space.h  agent.cpp  agent.h  behavior_tracker.cpp  behavior_tracker.h  env.cpp  env.h  observation.cpp  observation.h  pybind.cpp  pybind.h
managym/cardsets/: card_registry.cpp  card_registry.h
managym/cardsets/alpha/: alpha.cpp  alpha.h
managym/cardsets/basics/: basic_lands.cpp  basic_lands.h
managym/flow/: combat.cpp  combat.h  game.cpp  game.h  priority.cpp  priority.h  turn.cpp  turn.h
managym/infra/: info_dict.cpp  info_dict.h  log.cpp  log.h  performance.md  profiler.cpp  profiler.h
managym/render/: game_display.cpp  game_display.h
managym/state/: battlefield.cpp  battlefield.h  card.cpp  card.h  card_registry.cpp  card_registry.h  game_object.h  mana.cpp  mana.h  player.cpp  player.h  stack.cpp  stack.h  zone.cpp  zone.h  zones.cpp  zones.h
managym/ui/: game_display.cpp  game_display.h
managym_test/: managym_test.cpp  managym_test.h  test_action.cpp  test_agent.cpp  test_flow.cpp  test_state.cpp
scripts/: profile.py
test/: managym_test.cpp  managym_test.h  test_agent.cpp  test_flow.cpp  test_managym.py  test_state.cpp
tests/: main.cpp  managym_test.cpp  managym_test.h
tests/agent/: test_agent.cpp  test_behavior_tracker.cpp  test_managym.py  test_observation.cpp
tests/flow/: test_flow.cpp  test_game.cpp
tests/infra/: test_profiler.cpp
tests/state/: test_state.cpp
